Add source for jdk-6